<resources>
    <!--Login-->
    <string name="app_name">Pizza Delivery</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="hintEmail">pd@pd.com.br</string>
    <string name="hintSenha">Sua senha</string>
    <string name="nconta">Não tem conta? Cadastre-se</string>
    <string name="logar">Entrar</string>
    <string name="cCardapio">Confira nosso cardápio!</string>
    <!--Usuario-->
    <string name="dCadastro">Dados Cadastrais</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="tel">Telefone</string>
    <string name="dEndereco">Dados de Endereço</string>
    <string name="cep">CEP</string>
    <string name="rua">Rua</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="numero">Número</string>
    <string name="Comple">Complemento</string>
    <string name="dAcesso">Dados de Acesso</string>
    <string name="ConfSenha">Confirme sua senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="title_activity_maps">Map</string>
    <string name="salvar">Salvar</string>
    <string name="DelCont">Deletar Conta</string>
    <string name="title_activity_area_cliente">Area Cliente</string>
    <string name="Sair">Sair</string>
    <string name="Editar">Editar Conta</string>
    <string name="Historico">Histórico de pedidos</string>
    <string name="RealizarPedido">Realizar Pedido</string>
    <string name="Local">Confira nossa localização</string>
    <string name="CadPessoa">Cadastre-se</string>
    <string name="Dev">Developed by Paulo and Alex</string>
    <string name="CorpRegister">PizzaDelivery®</string>


</resources>
